upgrade spring